Fix: config table, wrap values on overflow

--- a/app/addons/config/assets/scss/config.scss
+++ b/app/addons/config/assets/scss/config.scss
@@ -31,6 +31,7 @@
   .config-show-value,
   .config-delete-value {
     cursor: pointer;
+    overflow-wrap: anywhere;
   }
 
   .text-center {
